<resources>
    <string name="app_name">Intents</string>
    <string name="welcome_text">¡Bienvenido al Himalaya!</string>
    <string name="email_hint">Email</string>
    <string name="user_login">Usuario</string>
    <string name="passwd_login">Contraseña</string>
    <string name="submit_btn">Ingresar</string>
    <string name="welcome_user_txt">¡Bienvenido %1$s!</string>
    <string name="email_btn">Mandar mail</string>
    <string name="email_body"><p>Un mail automático.</p></string>
    <string name="email_sendto">random@mail.com</string>
    <string name="sharing_intent_txt">Compartir usando...</string>
</resources>