<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/main_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.2"
        android:src="@mipmap/ic_launcher_foreground"/>

    <TextView
        android:id="@+id/welcome_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:layout_gravity="center"
        android:layout_weight="0.2"/>

    <EditText
        android:id="@+id/login_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/user_login"
        android:layout_gravity="fill_horizontal"
        android:layout_weight="0.1"/>

    <EditText
        android:id="@+id/login_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint"
        android:layout_gravity="fill_horizontal"
        android:layout_weight="0.1"/>

    <EditText
        android:id="@+id/login_psswd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/passwd_login"
        android:layout_gravity="fill_horizontal"
        android:layout_weight="0.1"/>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_btn"
        android:background="@color/colorAccent"
        android:textColor="@color/myWhite"
        android:layout_gravity="right"
        android:layout_marginBottom="@dimen/margin_botton_button"
        android:layout_marginEnd="@dimen/margin_end"
        android:layout_weight="0.02"/>
</LinearLayout>